test/fail/inheritance/inherit_builtin.lily
#[
SyntaxError: 'Integer' cannot be inherited from.
    from inherit_builtin.lily:6:
]#

class abc < Integer {  }
